styles: spacing issues
Margin and padding of typography and card were added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,8 @@
 }
 
 .header-title {
-  padding-top: 4.5625em;
-  padding-bottom: 2.5em;
+  padding: 2.5em 0 1.5em;
+  color: #6d708d;
 }
 
 label {
@@ -18,8 +18,7 @@ label {
 
 .card__price {
   font-size: 3.4rem;
-  margin-bottom: 1.163rem;
-  margin-top: 1.163rem;
+  margin: 1.163rem 0;
 }
 
 @media (min-width: 76.5rem) {
@@ -164,7 +163,7 @@ form .container {
 .card {
   background: white;
   padding: 2em;
-  border-radius: .9rem;
+  border-radius: .7rem;
   margin-bottom: 2em;
   width: clamp(241px, 90%, 347px);
   -webkit-box-shadow: 0 10px 40px 5px rgba(163, 168, 240, 0.2);
@@ -188,7 +187,7 @@ form .container {
 }
 
 .card-primary {
-  padding: 3em 2em;
+  padding: 3.5em 2em;
   background: -webkit-gradient(linear, left top, right top, from(#a3a8f0), to(#696fdd));
   background: linear-gradient(to right, #a3a8f0, #696fdd);
 }
